# precision-tracking

./: CMakeLists.txt  CMakeLists.txt.ros  LICENSE.txt  README.txt  adh_tracker3d.cpp  adh_tracker3d.h  alignment_evaluator.cpp  alignment_evaluator.h  ap_tracker3d.cpp  ap_tracker3d.h  density_grid_evaluator.cpp  density_grid_evaluator.h  density_grid_tracker.cpp  density_grid_tracker.h  down_sampler.cpp  down_sampler.h  fast_functions.cpp  fast_functions.h  lf_discrete_3d.cpp  lf_discrete_3d.h  lf_rgbd_6d.cpp  lf_rgbd_6d.h  lf_rgbd_6d_evaluator.cpp  lf_rgbd_6d_evaluator.h  model_builder.cpp  model_builder.h  motion_model.cpp  motion_model.h  package.xml  precision_tracker.cpp  precision_tracker.h  scored_transform.cpp  scored_transform.h  testColor.tm.REMOVED.git-id  test_tracking.cpp  track_manager_color.cpp  track_manager_color.h  tracker.cpp  tracker.h  transform_helper.cpp  (+1 more)
gtFolder/: .track248gt.txt.swp  track0gt.txt  track1035gt.txt  track1069gt.txt  track1070gt.txt  track1108gt.txt  track113gt.txt  track116gt.txt  track118gt.txt  track1263gt.txt  track126gt.txt  track1328gt.txt  track143gt.txt  track154gt.txt  track160gt.txt  track1738gt.txt  track1837gt.txt  track1870gt.txt  track1889gt.txt  track188gt.txt  track1891gt.txt  track1899gt.txt  track1918gt.txt  track1945gt.txt  track1963gt.txt  track1979gt.txt  track1gt.txt  track2017gt.txt  track201gt.txt  track2027gt.txt  track2032gt.txt  track2037gt.txt  track2039gt.txt  track2040gt.txt  track2043gt.txt  track2045gt.txt  track2073gt.txt  track2085gt.txt  track2089gt.txt  track2098gt.txt  (+476 more)
include/: adh_tracker3d.h  alignment_evaluator.h  density_grid_evaluator.h  down_sampler.h  high_res_timer.h  lf_rgbd_6d_evaluator.h  motion_model.h  precision_tracker.h  scored_transform.h  track_manager_color.h  tracker.h
include/precision_tracking/: adh_tracker3d.h  alignment_evaluator.h  density_grid_2d_evaluator.h  density_grid_3d_evaluator.h  density_grid_evaluator.h  down_sampler.h  high_res_timer.h  lf_rgbd_6d_evaluator.h  motion_model.h  params.h  precision_tracker.h  scored_transform.h  sensor_specs.h  track_manager_color.h  tracker.h
src/: adh_tracker3d.cpp  alignment_evaluator.cpp  density_grid_2d_evaluator.cpp  density_grid_3d_evaluator.cpp  density_grid_evaluator.cpp  down_sampler.cpp  high_res_timer.cpp  lf_rgbd_6d_evaluator.cpp  motion_model.cpp  precision_tracker.cpp  scored_transform.cpp  sensor_specs.cpp  track_manager_color.cpp  tracker.cpp
